core: use Arrays.asList instead of List.of
And remove unnecessary convertion to ArrayList

Change-Id: I7ce7060f7b3689891fd3fe76e4fa4458918e404f
Signed-off-by: Benny Zlotnik <bzlotnik@redhat.com>